# ur10e_lift

./: .gitmodules  README.md
ur10e_lift_control/: package.xml  setup.cfg  setup.py
ur10e_lift_description/: CMakeLists.txt  package.xml
ur10e_lift_description/config/: ur10e_lift_controllers.yaml
ur10e_lift_description/launch/: gz_sim.launch.py  rviz_only.launch.py  spawn.launch.py
ur10e_lift_description/rviz/: ur10e_lift.rviz
ur10e_lift_description/src/: robot_controller.py  robot_loader.py
ur10e_lift_description/urdf/: ur10e_lift.urdf.xacro
ur10e_lift_description/worlds/: custom_empty.sdf
ur10e_lift_trajectory_control/: CMakeLists.txt  package.xml
ur10e_lift_trajectory_control/include/ur10e_lift_trajectory_control/: ik_trajectory_planner.hpp  spline_trajectory_planner.hpp  trajectory_planner.hpp
ur10e_lift_trajectory_control/launch/: ik_trajectory_control.launch.py  spline_trajectory_control.launch.py  trajectory_control.launch.py
ur10e_lift_trajectory_control/scripts/: plot_trajectory_data.py
ur10e_lift_trajectory_control/src/: ik_trajectory_planner.cpp  spline_trajectory_planner.cpp  trajectory_planner.cpp
ur10e_lift_trajectory_control/waypoints/: cartesian_demo.txt  demo_trajectory.txt  spline_test.txt
